remove hardcoded Ambient page title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -25,15 +25,11 @@
             href="/favicon-16x16.png"
         />
         <link rel="manifest" href="/site.webmanifest" />
-        <link
-            rel="mask-icon"
-            href="/safari-pinned-tab.svg"
-            color="#7371fc"
-        />
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#7371fc" />
         <meta name="msapplication-TileColor" content="#0d1117" />
         <meta name="theme-color" content="#7371fc" />
 
-        <title>Ambient</title>
+        <!-- <title>Ambient</title> -->
         <meta name="title" content="Ambient Finance" />
         <meta
             name="description"
@@ -67,10 +63,7 @@
             property="twitter:description"
             content="Swap cryptocurrencies like a pro with Ambient. Decentralized trading is now better than ever."
         />
-        <meta
-            property="twitter:image"
-            content="/previewImage.png"
-        />
+        <meta property="twitter:image" content="/previewImage.png" />
         <meta property="og:image" content="/previewImage.png" />
     </head>
     <body>
