--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         <meta property="twitter:card" content="summary_large_image" />
         <meta name="twitter:site" content="@crocswap" />
 
-        <meta property="twitter:url" content="https://ambient.finance" />
-        <meta property="twitter:title" content="Ambient Finance" />
+        <meta property="twitter:url" content="%VITE_OG_URL%" />
+        <meta property="twitter:title" content="%VITE_OG_TITLE%" />
         <meta
             property="twitter:description"
-            content="Swap cryptocurrencies like a pro with Ambient. Decentralized trading is now better than ever."
+            content="%VITE_OG_DESCRIPTION%"
         />
         <meta
             property="twitter:image"
