--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="minimum-scale=1">
+
         <link
             rel="apple-touch-icon"
             sizes="180x180"
