--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link
             rel="apple-touch-icon"
             sizes="180x180"
