update html syntax

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="build-time" content="%__BUILD_TIME__%" />
-        <meta name="version" content="%__VERSION__%" />
+        <meta name="build-time" content="${__BUILD_TIME__}" />
+        <meta name="version" content="${__VERSION__}" />
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0"/>
         <link
             rel="apple-touch-icon"
