add version to html - staging

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 
         <meta name="title" content="%VITE_SITE_TITLE%" />
         <title>%VITE_SITE_TITLE%</title>
+        <meta name="build-time" content="__BUILD_TIME__" />
+        <meta name="version" content="__VERSION__" />
+        <meta name="print" content="__PRINT__" />
 
         <!-- Meta tags using environment variables -->
         <meta name="description" content="%VITE_META_DESCRIPTION%">
