attempt to preload home wallpaper

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             property="twitter:image"
             content="%VITE_OG_IMAGE%"
         />
+        <link rel="preload" as="image" href="/assets/home_wallpaper_compressed-rYzfuRY4.png">
     </head>
     <body>
         <script type="text/javascript">
