fix ambient logo preloading

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             content="%VITE_OG_IMAGE%"
         />
         <link rel="preload" as="image" href="/assets/home_wallpaper_compressed-rYzfuRY4.png">
-        <link rel="preload" as="image" href="src/assets/images/logos/large-vMbD2IRY.svg">
+        <link rel="preload" as="image" href="/assets/large-vMbD2IRY.svg">
     </head>
     <body>
         <script type="text/javascript">
