reduce size of homepage wallpaper

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             property="twitter:image"
             content="%VITE_OG_IMAGE%"
         />
-        <link rel="preload" as="image" href="/assets/home_wallpaper_compressed-rYzfuRY4.png">
+        <link rel="preload" as="image" href="/assets/home_wallpaper-BwFdAHxz.webp">
         <link rel="preload" as="image" href="/assets/home2-B0w_rjgT.png">
         <link rel="preload" as="image" href="/assets/large-vMbD2IRY.svg">
     </head>
