add preloading for more homepage images

--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
             content="%VITE_OG_IMAGE%"
         />
         <link rel="preload" as="image" href="/assets/home_wallpaper-KI3qiyrN.webp">
-        <link rel="preload" as="image" href="/assets/home2-B0w_rjgT.png">
         <link rel="preload" as="image" href="/assets/large-vMbD2IRY.svg">
+        <link rel="preload" as="image" href="/assets/home2-B0w_rjgT.png">
+        <link rel="preload" as="image" href="/assets/home3-BrHIFt-b.png">
+        <link rel="preload" as="image" href="/assets/home4-Dnheheyw.png">
+        <link rel="preload" as="image" href="/assets/liquidity-BaHE5Vgl.png">
+        <link rel="preload" as="image" href="/assets/orders-CKLSnRK0.png">
     </head>
     <body>
         <script type="text/javascript">
