add more homepage images to preload

--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
         <link rel="preload" as="image" href="/assets/home4-Dnheheyw.png">
         <link rel="preload" as="image" href="/assets/liquidity-BaHE5Vgl.png">
         <link rel="preload" as="image" href="/assets/orders-CKLSnRK0.png">
+        <link rel="preload" as="image" href="/assets/blocktower-B33MWV79.svg">
+        <link rel="preload" as="image" href="/assets/jane-D9VkE8N_.svg">
+        <link rel="preload" as="image" href="/assets/circle-tPt3OG6C.svg">
+        <link rel="preload" as="image" href="/assets/tensai-CP-9ncoQ.png">
+        <link rel="preload" as="image" href="/assets/naval-Cz2LNnkE.svg">
+        <link rel="preload" as="image" href="/assets/naval-Cz2LNnkE.svg">
+        <link rel="preload" as="image" href="/assets/yunt-EAmobEXs.svg">
+        <link rel="preload" as="image" href="/assets/susa-BX3JXfx5.svg">
+        <link rel="preload" as="image" href="/assets/quantstamp-DMt-0SUG.svg">
     </head>
     <body>
         <script type="text/javascript">
