add more homepage images to preload

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
         <link rel="preload" as="image" href="/assets/yunt-EAmobEXs.svg">
         <link rel="preload" as="image" href="/assets/susa-BX3JXfx5.svg">
         <link rel="preload" as="image" href="/assets/quantstamp-DMt-0SUG.svg">
+        <link rel="preload" as="image" href="/assets/hypotenuse-DGfAiAcN.svg">
+        <link rel="preload" as="image" href="/assets/positivesum-HNNpUrbY.svg">
+        <link rel="preload" as="image" href="/assets/positivesum-HNNpUrbY.svg">
+        <link rel="preload" as="image" href="/assets/motivate-CVKvWubE.svg">
+        <link rel="preload" as="image" href="/favicon-32x32.png">
     </head>
     <body>
         <script type="text/javascript">
