attempt to preload fonts

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
         <link rel="preload" as="image" href="/assets/positivesum-HNNpUrbY.svg">
         <link rel="preload" as="image" href="/assets/motivate-CVKvWubE.svg">
         <link rel="preload" as="image" href="/favicon-32x32.png">
+        <link rel="preload" as="image" href="https://fonts.gstatic.com/s/lexenddeca/v21/K2F1fZFYk-dHSE0UPPuwQ5qnJy8.woff2">
+        <link rel="preload" as="image" href="https://fonts.gstatic.com/s/lexendexa/v30/UMBXrPdOoHOnxExyjdBeai3dAw.woff2">
+        <link rel="preload" as="image" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@100;300;400;500&display=swap">
+        <link rel="preload" as="image" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap">
+        <link rel="preload" as="image" href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;300&display=swap">
+        <link rel="preload" as="image" href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100;300;500&display=swap">
     </head>
     <body>
         <script type="text/javascript">
