--- a/index.html
+++ b/index.html
@@ -86,6 +86,15 @@
         <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap">
         <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;300&display=swap">
         <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100;300;500&display=swap">
+        <link rel="preload" as="json" href="/ambient-token-list.json">
+        <link rel="preload" as="json" href="/testnet-token-list.json">
+        <link rel="preload" as="json" href="/futa-token-list.json">
+        <link rel="preload" as="json" href="https://ambindexer.net/gcgo/chain_stats?chainId=0x1&n=10">
+        <link rel="preload" as="json" href="https://ambindexer.net/scroll-gcgo/chain_stats?chainId=0x82750&n=20">
+        <link rel="preload" as="json" href="https://ambindexer.net/blast-gcgo/chain_stats?chainId=0x13e31&n=10">
+        <link rel="preload" as="json" href="https://ambindexer.net/scroll-gcgo/all_pool_stats?chainId=0x82750&with24hPrices=true">
+        <link rel="preload" as="json" href="https://raw.githubusercontent.com/scroll-tech/token-list/main/scroll.tokenlist.json">
+        <link rel="preload" as="json" href="https://ambindexer.net/scroll-gcgo/all_pool_stats?chainId=0x82750&with24hPrices=true">
     </head>
     <body>
         <script type="text/javascript">
