--- a/index.html
+++ b/index.html
@@ -86,12 +86,17 @@
         <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400&display=swap">
         <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;300&display=swap">
         <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Lexend+Exa:wght@100;300;500&display=swap">
+        <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap">
         <link rel="preload" as="fetch" href="https://ambindexer.net/gcgo/chain_stats?chainId=0x1&n=10" crossorigin="anonymous">
         <link rel="preload" as="fetch" href="https://ambindexer.net/scroll-gcgo/chain_stats?chainId=0x82750&n=20" crossorigin="anonymous">
         <link rel="preload" as="fetch" href="https://ambindexer.net/blast-gcgo/chain_stats?chainId=0x13e31&n=10" crossorigin="anonymous">
         <link rel="preload" as="fetch" href="https://ambindexer.net/scroll-gcgo/all_pool_stats?chainId=0x82750&with24hPrices=true" crossorigin="anonymous">
         <link rel="preload" as="fetch" href="https://raw.githubusercontent.com/scroll-tech/token-list/main/scroll.tokenlist.json" crossorigin="anonymous">
         <link rel="preload" as="fetch" href="https://ambindexer.net/scroll-gcgo/all_pool_stats?chainId=0x82750&with24hPrices=true" crossorigin="anonymous">
+        <link rel="preload" as="fetch" href="https://tokens.coingecko.com/ethereum/all.json" crossorigin="anonymous">
+        <link rel="preload" as="fetch" href="https://tokens.coingecko.com/blast/all.json" crossorigin="anonymous">
+        <link rel="preload" as="fetch" href="https://tokens.coingecko.com/base/all.json" crossorigin="anonymous">
+        <link rel="preload" as="fetch" href="https://tokens.coingecko.com/scroll/all.json" crossorigin="anonymous">
     </head>
     <body>
         <script type="text/javascript">
