--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         />
         <link rel="preload" as="image" href="/assets/home_wallpaper-KI3qiyrN.webp">
         <link rel="preload" as="image" href="/assets/large-vMbD2IRY.svg">
-        <link rel="preload" as="image" href="/assets/home2-B0w_rjgT.png">
+        <!-- <link rel="preload" as="image" href="/assets/home2-B0w_rjgT.png">
         <link rel="preload" as="image" href="/assets/home3-BrHIFt-b.png">
         <link rel="preload" as="image" href="/assets/home4-Dnheheyw.png">
         <link rel="preload" as="image" href="/assets/liquidity-BaHE5Vgl.png">
@@ -79,7 +79,7 @@
         <link rel="preload" as="image" href="/assets/hypotenuse-DGfAiAcN.svg">
         <link rel="preload" as="image" href="/assets/positivesum-HNNpUrbY.svg">
         <link rel="preload" as="image" href="/assets/positivesum-HNNpUrbY.svg">
-        <link rel="preload" as="image" href="/assets/motivate-CVKvWubE.svg">
+        <link rel="preload" as="image" href="/assets/motivate-CVKvWubE.svg"> -->
         <link rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/lexenddeca/v21/K2F1fZFYk-dHSE0UPPuwQ5qnJy8.woff2" crossorigin="anonymous">
         <link rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/lexendexa/v30/UMBXrPdOoHOnxExyjdBeai3dAw.woff2" crossorigin="anonymous">
         <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@100;300;400;500&display=swap">
